Added API url and key

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Trivia Game</title>
+    <title>GifTastic</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                     <div class="form-group">
                         <label for="add-item">Add an item:</label>
                         <input type="text" class="form-control my-2" id="add-item" placeholder="Add . . .">
-                        <div class="btn btn-secondary my-2">Submit</div>
+                        <div class="btn btn-secondary my-2" id="submit-btn">Submit</div>
                     </div>
                 </form>
             </div>
@@ -28,7 +28,9 @@
         </div>
 
         <div class="col-sm-12 col-md-8">
-            <div id="gif-wrapper" class="d-flex flex-wrap border h-100"></div>
+            <div id="gif-wrapper" class="d-flex flex-wrap border h-100">
+                Look into grids
+            </div>
         </div>
     </div>
 
@@ -37,6 +39,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script src="./assets/js/logic.js"></script>
 </body>
