--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </div>
 
         <div class="col-sm-12 col-md-8">
-            <div id="gif-wrapper" class="d-flex flex-wrap border h-100">
-                Look into grids
+            <div id="gif-wrapper" class="d-flex flex-wrap">
             </div>
         </div>
     </div>
