--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="col-sm-12 col-md-8">
-            <div id="gif-wrapper" class="d-flex flex-wrap">
+            <div id="gif-wrapper" class="grid">
             </div>
         </div>
     </div>
