Styled list of buttons

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                     </div>
                 </form>
             </div>
-            <div id="button-wrapper"></div>
+            <div id="items-wrapper"></div>
         </div>
 
-        <div class="col-sm-12 col-md-8">
+        <div class="col-sm-12 col-md-8 mb-3">
             <div id="gallery"></div>
         </div>
     </div>
