Buttons updates ajax call

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Permanent+Marker" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>GifTastic</title>
 </head>
@@ -18,7 +19,7 @@
             <div id="search-wrapper">
                 <form>
                     <div class="form-group">
-                        <label for="add-item">Add an item:</label>
+                        <h1 id="search-label">Add an item:</h1>
                         <input type="text" class="form-control my-2" id="add-item" placeholder="Add . . .">
                         <div class="btn btn-secondary my-2" id="submit-btn">Submit</div>
                     </div>
