Ability to add/clear button library

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                 <form>
                     <div class="form-group">
                         <h1 id="search-label">Add an item:</h1>
-                        <input type="text" class="form-control my-2" id="add-item" placeholder="Add . . .">
-                        <div class="btn btn-secondary my-2" id="submit-btn">Submit</div>
+                        <input type="text" class="form-control my-2" id="add-item" placeholder="Search . . .">
+                        <div class="btn btn-primary my-2" id="submit-btn">Submit</div>
+                        <div class="btn btn-secondary my-2" id="clear-btn">Clear Library</div>
                     </div>
                 </form>
             </div>
