--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="row m-4">
+    <div class="row m-4 d-flex flex-row-reverse">
         <div class="col-sm-12 col-md-4">
             <div id="search-wrapper">
                 <form>
